--- a/src/components/WeatherScreen/CurrentWeather/CurrentWeather.css
+++ b/src/components/WeatherScreen/CurrentWeather/CurrentWeather.css
@@ -1,22 +1,34 @@
 .current-weather {
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 2vh;
   background-color: #1E1E1E;
-  color: #FFFFFF;
   border-radius: 16px;
-  padding: 2rem;
-  margin: 1rem auto;
-  max-width: 600px;
-  text-align: center;
+  padding: clamp(1rem, 2vh, 2rem);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+  text-align: center;
 }
 
+
 .current-weather h1 {
-  font-size: 4rem;
+  font-size: clamp(1.5rem, 5vw, 3rem);
   color: #00C9A7;
   margin-bottom: 0.5rem;
 }
 
 .current-weather p {
-  font-size: 1.1rem;
+  font-size: clamp(0.9rem, 1.2vw, 1.2rem);
   margin: 0.25rem 0;
   color: #B0BEC5;
+}
+
+.refresh-button {
+  color: white;
+  background-color: #00C9A7;
+  transition: all 0.2s ease-in-out;
+}
+
+.refresh-button:hover {
+  background-color: #1E1E1E;
+  border-color: #00C9A7;
 }
