Styling to ensure sizing bounds

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .app-screen {
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  max-height: 400px;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;  /* Vertical centering */
   align-items: center;      /* Horizontal centering */
-
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
+  justify-content: space-between;
 
   background-color: #121212;
+  box-sizing: border-box;
+  padding: 0.5rem;
 }
+
