--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: clamp(10px, 2.5vw, 16px);
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 600;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -26,6 +27,19 @@ html, body {
   padding: 0;
   height: 100%;
   overflow: hidden;
+}
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+
+  display: flex;
+  justify-content: center; /* horizontally center */
+  align-items: center;     /* vertically center */
+
+  background-color: #121212; /* or your app bg */
+  box-sizing: border-box;
 }
 
 a {
