--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 .app-screen {
   width: 100%;
   height: 100%;
-  max-width: 300px;
-  max-height: 400px;
 
   display: flex;
   flex-direction: column;
-  align-items: center;      /* Horizontal centering */
+  align-items: center;      
   justify-content: space-between;
 
   background-color: #121212;
   box-sizing: border-box;
-  padding: 0.5rem;
 }
 
